FIX: refatcor buttons style alignment. (2)

--- a/source/css/_common/components/post/post-meta.styl
+++ b/source/css/_common/components/post/post-meta.styl
@@ -44,11 +44,17 @@
   +mobile() { display: none; }
 }
 
-.fb_iframe_widget {
-  top: -2px;
+.social-like {
+  height: 20px;
+  text-align: center;
+  border-top: 1px solid #eee;
+  padding-top: 6px;
+  margin-top: 40px;
 }
 
-#vk_like {
+.vk_like {
   display: inline-block;
-  top: 6px;
+  width: 85px;
+  height: 22px;
+  vertical-align: bottom;
 }
